# feature/inwardfee/handler/inwardFee.go
@@ -17,7 +17,7 @@ type InwardHandler struct{}
 // @Accept  json
 // @Produce  json
 // @Param model body model.Request true "Request"
-// @Success 200 {object} util.Response
+// @Success 200 {object} util.Response{responseDetail=model.Response}
 // @Router /fee/inward/v1/iwrm [post]
 func (u *InwardHandler) InwardFee(c *gin.Context) {
 	var req model.Request
@@ -27,7 +27,7 @@ func (u *InwardHandler) InwardFee(c *gin.Context) {
 		if code, errs := req.Validate(); errs != nil {
 			util.JsonResponse(c, code, "", errs)
 		} else {
-			util.JsonResponse(c, code, "", req)
+			util.JsonResponse(c, code, "", util.Response{})
 		}
 	}
 }
